--- a/index.html
+++ b/index.html
@@ -18,16 +18,17 @@
         <a id = "before">
         </a>
     </div>
-    <div id ="command" onclick="$('texter').focus();">
-        <textarea type="text" id="texter" onkeyup="typeIt(this, event)" onkeydown="typeit(this, event)" onkeydown="typeIt(this, event); 
-        moveIt(this.value.length, event)" onkeypress="typeIt(this, event);" autofocus=""></textarea>
-        <div id="liner">
-            <span id ="typer"></span><b class="cursor" id="cursor" style="left: 0px"></b>
+        <div id ="command" onclick="$('texter').focus();">
+            <textarea type="text" id="texter" onkeyup="typeIt(this, event)" onkeydown="typeIt(this, event); 
+            moveIt(this.value.length, event)" onkeypress="typeIt(this, event);" autofocus=""></textarea>
+            <div id="liner">
+                <span id ="typer"></span><b class="cursor" id="cursor" style="left: 0px"></b>
+            </div>
         </div>
-    </div>
-    <script src="script.js"></script>
-    <script src="commands.js"></script>
-    <script src="main.js"></script>
-    
-</body>
-</html>
+        <script src="main.js"></script>
+        <script src="script.js"></script>
+        <script src="commands.js"></script>
+        <script src="jquery-3.6.0.min.js"></script>
+        
+    </body>
+    </html>
