--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
+<!--
+    author: Adam Tanweer
+    date: 2024-05-26
+    description: This is the main file of the project. It is the main page of the terminal.
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <style>
         #liner::before {
-            color: green;
+            color: rgb(73, 151, 90);
             content: "visitor@localhost:~$"
         }
     </style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adam TANWEER | Web Terminal</title>
     <link rel="stylesheet" type="text/css" media="screen" href="style.css">
