--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <head>
     <style>
         #liner::before {
-            color: rgb(73, 151, 90);
+            color: #9677df;
             content: "visitor@localhost:~$"
         }
     </style>
