--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <head>
     <style>
         #liner::before {
-            color: #9677df;
+            color: #ccb6ff;
             content: "visitor@localhost:~$"
         }
     </style>
@@ -21,6 +21,19 @@
     <link rel="stylesheet" type="text/css" media="screen" href="style.css">
 </head>
 <body>
+    <pre>
+         _________
+        / ======= \
+       / __________\
+      | ___________ |
+      | | -       | |
+      | |         | |
+      | |_________| |_______________________________
+      \=____________/   Poltanek's Web Terminal     )
+      / """"""""""" \                              /
+     / ::::::::::::: \                         =D-'
+    (_________________)
+    </pre>
     <div id = "terminal">
         <a id = "before">
         </a>
