--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <script src="script.js"></script>
         <script src="commands.js"></script>
         <script src="jquery-3.6.0.min.js"></script>
+        <script src="robco.js"></script>
         
     </body>
     </html>
