--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <head>
     <style>
         #liner::before {
-            color: #ccb6ff;
+            color: #00ff48;
             content: "visitor@localhost:~$"
         }
     </style>
@@ -21,13 +21,16 @@
     <link rel="stylesheet" type="text/css" media="screen" href="style.css">
 </head>
 <body>
+    Copyright (C) Adam Tanweer's Portfolio. All projects reserved.
+
+    Work in Progress...
     <pre>
          █████╗ ██████╗  █████╗ ███╗   ███╗    ████████╗ █████╗ ███╗   ██╗██╗    ██╗███████╗███████╗██████╗ 
         ██╔══██╗██╔══██╗██╔══██╗████╗ ████║    ╚══██╔══╝██╔══██╗████╗  ██║██║    ██║██╔════╝██╔════╝██╔══██╗
         ███████║██║  ██║███████║██╔████╔██║       ██║   ███████║██╔██╗ ██║██║ █╗ ██║█████╗  █████╗  ██████╔╝
         ██╔══██║██║  ██║██╔══██║██║╚██╔╝██║       ██║   ██╔══██║██║╚██╗██║██║███╗██║██╔══╝  ██╔══╝  ██╔══██╗
         ██║  ██║██████╔╝██║  ██║██║ ╚═╝ ██║       ██║   ██║  ██║██║ ╚████║╚███╔███╔╝███████╗███████╗██║  ██║
-        ╚═╝  ╚═╝╚═════╝ ╚═╝  ╚═╝╚═╝     ╚═╝       ╚═╝   ╚═╝  ╚═╝╚═╝  ╚═══╝ ╚══╝╚══╝ ╚══════╝╚══════╝╚═╝  ╚═╝
+        ╚═╝  ╚═╝╚═════╝ ╚═╝  ╚═╝╚═╝     ╚═╝       ╚═╝   ╚═╝  ╚═╝╚═╝  ╚═══╝ ╚══╝╚══╝ ╚══════╝╚══════╝╚═╝  ╚═╝ v2.1.0
     </pre>
     <div id = "terminal">
         <a id = "before">
